--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "mongodb": "^2.2.35",
     "mongoose": "^5.0.10",
