--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "mongodb": "^2.2.35",
     "mongoose": "^5.0.10",
     "ngx-bootstrap": "^2.0.2",
