--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
     "mongodb": "^2.2.35",
     "mongoose": "^5.0.10",
     "ngx-bootstrap": "^2.0.2",
