--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@swimlane/ngx-datatable": "^11.2.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
+    "color": "^3.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
