--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
